crates/parser/src/tests/snapshots/array_index_2.snap
---
source: crates/parser/src/tests.rs
assertion_line: 284
expression: "(test[1], ast, ast_string)"
---
- "x[1 + 2]"
- Ok:
    nodes:
      - Expr:
          Index:
            binding:
              Expr:
                Ident:
                  name: x
                  ty: ~
            idx:
              Expr:
                BinOp:
                  op: Add
                  lhs:
                    Expr:
                      Lit:
                        value:
                          UInt64: 1
                        ty: ~
                  rhs:
                    Expr:
                      Lit:
                        value:
                          UInt64: 2
                        ty: ~
                  ty: ~
            ty: ~
- "x[(+ 1 2)]"

