crates/parser/src/tests/snapshots/array_index_3.snap
---
source: crates/parser/src/tests.rs
assertion_line: 294
expression: "(test[1], ast, ast_string)"
---
- "x[y[0]]"
- Ok:
    nodes:
      - kind:
          Index:
            binding:
              kind:
                Ident:
                  name: x
            idx:
              kind:
                Index:
                  binding:
                    kind:
                      Ident:
                        name: y
                  idx:
                    kind:
                      Lit:
                        value:
                          UInt64: 0
- "x[y[0]]"

