crates/parser/src/tests/snapshots/assignment_basic.snap
---
source: crates/parser/src/tests.rs
assertion_line: 29
expression: "(test[1], ast, ast_string)"
---
- x = x + 1
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Assign
            lhs:
              kind:
                Ident:
                  name: x
            rhs:
              kind:
                BinOp:
                  op: Add
                  lhs:
                    kind:
                      Ident:
                        name: x
                  rhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 1
- (= x (+ x 1))

