crates/parser/src/tests/snapshots/binop_basic_var.snap
---
source: crates/parser/src/tests.rs
assertion_line: 47
expression: "(test[1], ast, ast_string)"
---
- 19 + a + 40
- Ok:
    nodes:
      - BinOp:
          op: Add
          lhs:
            BinOp:
              op: Add
              lhs:
                Lit:
                  value:
                    UInt64: 19
              rhs:
                Ident:
                  name: a
          rhs:
            Lit:
              value:
                UInt64: 40
- (+ (+ 19 a) 40)

