crates/parser/src/tests/snapshots/binop_multi.snap
---
source: crates/parser/src/tests.rs
assertion_line: 47
expression: "(test[1], ast, ast_string)"
---
- 19 ** 21 ** 40; 19 - 21 * 20 + 40
- Ok:
    nodes:
      - node:
          BinOp:
            op: Pow
            lhs:
              node:
                Lit:
                  value:
                    UInt64: 19
            rhs:
              node:
                BinOp:
                  op: Pow
                  lhs:
                    node:
                      Lit:
                        value:
                          UInt64: 21
                  rhs:
                    node:
                      Lit:
                        value:
                          UInt64: 40
      - node:
          BinOp:
            op: Add
            lhs:
              node:
                BinOp:
                  op: Sub
                  lhs:
                    node:
                      Lit:
                        value:
                          UInt64: 19
                  rhs:
                    node:
                      BinOp:
                        op: Mul
                        lhs:
                          node:
                            Lit:
                              value:
                                UInt64: 21
                        rhs:
                          node:
                            Lit:
                              value:
                                UInt64: 20
            rhs:
              node:
                Lit:
                  value:
                    UInt64: 40
- (** 19 (** 21 40))(+ (- 19 (* 21 20)) 40)

