crates/parser/src/tests/snapshots/binop_with_unop.snap
---
source: crates/parser/src/tests.rs
assertion_line: 47
expression: "(test[1], ast, ast_string)"
---
- 19 + 21 + -40
- Ok:
    nodes:
      - BinOp:
          op: Add
          lhs:
            BinOp:
              op: Add
              lhs:
                Lit:
                  value:
                    UInt64: 19
              rhs:
                Lit:
                  value:
                    UInt64: 21
          rhs:
            UnOp:
              op: Sub
              rhs:
                Lit:
                  value:
                    UInt64: 40
- (+ (+ 19 21) (- 40))

