crates/parser/src/tests/snapshots/block_empty.snap
---
source: crates/parser/src/tests.rs
assertion_line: 60
expression: "(test[1], ast, ast_string)"
---
- "if foo {}"
- Ok:
    nodes:
      - Cond:
          cond_expr:
            Ident:
              name: foo
          then_block:
            Block:
              list: []
          else_block: ~
- "(if foo '()))"

