crates/parser/src/tests/snapshots/block_let.snap
---
source: crates/parser/src/tests.rs
assertion_line: 60
expression: "(test[1], ast, ast_string)"
---
- "let x: int = { 1 }"
- Ok:
    nodes:
      - Let:
          name: x
          antn: int
          init:
            Block:
              list:
                - Lit:
                    value:
                      UInt64: 1
- "(let x:int '(1))"

